# rsomics-friedman-test

./: Cargo.toml  README.md
benches/: friedman.rs
src/: cli.rs  friedman.rs  igamc.rs  lib.rs  rank.rs
tests/: compat.rs  smoke.rs
tests/golden/: all_tied.tsv  doc_example.tsv  expected.json  hand_ties.tsv  heavy_ties.tsv  no_ties.tsv  partial_ties.tsv
