[package]
name = "rsomics-friedman-test"
version = "0.1.0"
description = "Friedman chi-square test for repeated measures — scipy.stats.friedmanchisquare equivalent, value-exact"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-friedman-test"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["statistics", "friedman", "scipy", "nonparametric", "bioinformatics"]
readme = "README.md"

[[bin]]
name = "rsomics-friedman-test"
path = "src/main.rs"

[lib]
name = "rsomics_friedman_test"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
libm = "0.2"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "friedman"
harness = false
